--- a/website/site-static/sass/apps/scheduler.sass
+++ b/website/site-static/sass/apps/scheduler.sass
@@ -2,6 +2,10 @@
  * Scheduler stylesheet
  */
 
+
+
+@import site/variables
+
 @import apps/datepicker
 
 body.scheduler
@@ -47,6 +51,7 @@ $theme-4-bright: #f2dacc
         small
           font-size: 92%
           color: #a5a5a5
+
           
     section.description
       p
