--- a/website/site-static/sass/site/_type.sass
+++ b/website/site-static/sass/site/_type.sass
@@ -83,6 +83,21 @@ h6
 .page-header h1
   line-height: 1
 
+// Page content (basically markdown content)
+.page-content
+  // padding-bottom: $baseLineHeight - 1
+  // margin: $baseLineHeight 0
+  // border-bottom: 1px solid $grayLighter
+  padding-top: $basePadding / 3
+  &.padded
+    padding: $basePadding
+  &.padded-h
+    padding-left: $basePadding
+    padding-right: $basePadding
+  &.padded-v
+    padding-top: $basePadding
+    padding-bottom: $basePadding
+
 // LISTS
 // -----
 
