--- a/website/apps/importer/templates/importer/import_form_pushy.html
+++ b/website/apps/importer/templates/importer/import_form_pushy.html
@@ -117,7 +117,7 @@ $(document).ready(function() {
 		importer.ui.fileupload_options = {
 	        maxFileSize: 1000000000, // 1000 MB
 	        minFileSize: 200000,
-	        acceptFileTypes: /(\.|\/)(mp3|aif?f|wav|avi|flac|mp4|ogg)$/i,
+	        acceptFileTypes: /(\.|\/)(mp3|aif?f|wav|avi|flac|mp4|m4a|ogg)$/i,
             sequentialUploads: true,
 	        limitConcurrentUploads: 1
 	   };
