--- a/website/templates/base/_common_script.html
+++ b/website/templates/base/_common_script.html
@@ -15,6 +15,7 @@
 	{% addtoblock "css" %}<link type="text/css" href="{{ STATIC_URL }}css/screen.css" rel="stylesheet" />{% endaddtoblock %}
 	{% addtoblock "css" %}<link type="text/css" href="{{ STATIC_URL }}css/temporary.css" rel="stylesheet" />{% endaddtoblock %}
 	{% addtoblock "css" %}<link type="text/css" href="{{ STATIC_URL }}css/wip.css" rel="stylesheet" />{% endaddtoblock %}
+	{% addtoblock "css" %}<link type="text/css" href="{{ STATIC_URL }}css/print.css" rel="stylesheet" media="print" />{% endaddtoblock %}
 
 	<!-- iconset -->
 	{% addtoblock "css" %}<link type="text/css" href="{{ STATIC_URL }}css/iconset/fontcustom.css" rel="stylesheet" />{% endaddtoblock %}
