--- a/website/apps/importer/templates/importer/import_form_pushy.html
+++ b/website/apps/importer/templates/importer/import_form_pushy.html
@@ -118,8 +118,8 @@ $(document).ready(function() {
 	        maxFileSize: 1000000000, // 1000 MB
 	        minFileSize: 200000,
 	        acceptFileTypes: /(\.|\/)(mp3|aif?f|wav|avi|flac|mp4|m4a|ogg)$/i,
-            sequentialUploads: true,
-	        limitConcurrentUploads: 1
+            sequentialUploads: false,
+	        limitConcurrentUploads: 4
 	   };
 
 	   importer.ui.init();
