--- a/website/apps/alibrary/templates/alibrary/artist/list_item_l.html
+++ b/website/apps/alibrary/templates/alibrary/artist/list_item_l.html
@@ -3,6 +3,10 @@
 <div class="list_body_row selectable clickable item artist view edit stream collect download" id="list_item_{{ item.pk }}"
      data-resource_uri="{{ item.get_api_url }}"
      data-absolute_url="{{ item.get_absolute_url }}"
+     {% if item.main_image %}
+     data-image_color="{% thumbnail item.main_image 200x200 crop upscale subject_location=item.main_image.subject_location %}"
+     data-image_bw="{% thumbnail item.main_image 200x200 crop bw upscale subject_location=item.main_image.subject_location %}"
+     {% endif %}
      {% if item.main_image %}style="background-image: url({% thumbnail item.main_image 200x200 crop bw upscale subject_location=item.main_image.subject_location %});"{% endif %}>
 
     <div class="wrapper_icon">
