--- a/website/apps/importer/templates/importer/import_form_pushy.html
+++ b/website/apps/importer/templates/importer/import_form_pushy.html
@@ -208,6 +208,11 @@ $(document).ready(function() {
 
             {% comment %}<p>{% trans "Loading import" %}</p>{% endcomment %}
 
+
+            <div id="loading_message">
+                <p>{% trans "Loading your import - please be patient!" %}</p>
+            </div>
+
 		</div>
     </div>
 
