--- a/website/site-static/css/screen.css
+++ b/website/site-static/css/screen.css
@@ -11508,218 +11508,227 @@ i.ajax-loader.c3CA3B9 {
   background-image: url(/static/img/icons/loader/loader.3CA3B9.gif);
 }
 
-/* line 61, ../sass/apps/_importer.sass */
+/* line 47, ../sass/apps/_importer.sass */
+#loading_message {
+  min-height: 120px;
+  text-align: center;
+  vertical-align: middle;
+  padding-top: 90px;
+  background: #efefef;
+}
+
+/* line 66, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item {
   background: #fafafa;
   margin-bottom: 15px;
 }
-/* line 67, ../sass/apps/_importer.sass */
+/* line 72, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item .icon-holder {
   padding-top: 12px;
 }
-/* line 70, ../sass/apps/_importer.sass */
+/* line 75, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item .icon-holder i {
   font-size: 30px;
   color: green;
 }
-/* line 75, ../sass/apps/_importer.sass */
+/* line 80, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.waiting {
   opacity: 0.5;
   cursor: wait;
 }
-/* line 81, ../sass/apps/_importer.sass */
+/* line 86, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.init {
   opacity: 0.5;
   cursor: wait;
 }
-/* line 84, ../sass/apps/_importer.sass */
+/* line 89, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.init .icon-blank:before {
   content: "\f017";
 }
-/* line 92, ../sass/apps/_importer.sass */
+/* line 97, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.info {
   background-color: #ddffd9;
   color: #00bb00;
 }
-/* line 97, ../sass/apps/_importer.sass */
+/* line 102, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.warning h3 {
   background-color: #fcf8e3;
 }
-/* line 101, ../sass/apps/_importer.sass */
+/* line 106, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.error {
   background-color: #ffeed4;
   color: #ff743e;
 }
-/* line 105, ../sass/apps/_importer.sass */
+/* line 110, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.success {
   background-color: #ddffd9;
   color: #00bb00;
 }
-/* line 112, ../sass/apps/_importer.sass */
+/* line 117, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.ready .icon-blank:before {
   content: "\f096";
 }
-/* line 118, ../sass/apps/_importer.sass */
+/* line 123, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.working .icon-blank:before {
   content: "\f021";
 }
-/* line 123, ../sass/apps/_importer.sass */
+/* line 128, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.working div.result-set {
   display: block;
 }
-/* line 128, ../sass/apps/_importer.sass */
+/* line 133, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.working .progress {
   height: 5px;
   background: none;
   box-shadow: none;
 }
-/* line 133, ../sass/apps/_importer.sass */
+/* line 138, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.working .progress > .bar {
   height: 4px;
   background: #00bb00;
 }
-/* line 138, ../sass/apps/_importer.sass */
+/* line 143, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.duplicate {
   background-color: #fffeac;
   color: #5a5a5a;
 }
-/* line 141, ../sass/apps/_importer.sass */
+/* line 146, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.duplicate .icon-blank:before {
   content: "\f0c5";
 }
-/* line 144, ../sass/apps/_importer.sass */
+/* line 149, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.duplicate div.status-imported {
   display: block;
 }
-/* line 146, ../sass/apps/_importer.sass */
+/* line 151, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.duplicate div.status-duplicate {
   display: block;
 }
-/* line 153, ../sass/apps/_importer.sass */
+/* line 158, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.done {
   background-color: #ddffd9;
   color: #5a5a5a;
 }
-/* line 156, ../sass/apps/_importer.sass */
+/* line 161, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.done .icon-blank:before {
   content: "\f046";
 }
-/* line 159, ../sass/apps/_importer.sass */
+/* line 164, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.done div.status-imported {
   display: block;
 }
-/* line 163, ../sass/apps/_importer.sass */
+/* line 168, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.queued {
   background-color: #d8f9ff;
   color: #5a5a5a;
 }
-/* line 166, ../sass/apps/_importer.sass */
+/* line 171, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item.queued div.status-queue {
   display: block;
 }
-/* line 174, ../sass/apps/_importer.sass */
+/* line 179, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.status-imported .information {
   min-height: 80px;
 }
-/* line 176, ../sass/apps/_importer.sass */
+/* line 181, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.status-imported .image img {
   margin-right: 10px;
   width: 70px;
   height: 70px;
 }
-/* line 182, ../sass/apps/_importer.sass */
+/* line 187, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.status-queue .information {
   min-height: 80px;
 }
-/* line 184, ../sass/apps/_importer.sass */
+/* line 189, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.status-queue .image img {
   margin-right: 10px;
   width: 70px;
   height: 70px;
 }
-/* line 190, ../sass/apps/_importer.sass */
+/* line 195, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item h3 {
   padding: 5px;
   font-size: 12px;
 }
-/* line 193, ../sass/apps/_importer.sass */
+/* line 198, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item h3 small {
   font-size: 10px;
 }
-/* line 199, ../sass/apps/_importer.sass */
+/* line 204, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set {
   padding: 5px 0;
   border-bottom: 1px solid #eeeeee;
 }
-/* line 203, ../sass/apps/_importer.sass */
+/* line 208, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set img {
   margin-right: 4px;
   width: 66px;
   height: 66px;
 }
-/* line 208, ../sass/apps/_importer.sass */
+/* line 213, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set.provider-tag {
   font-size: 11px;
 }
-/* line 210, ../sass/apps/_importer.sass */
+/* line 215, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set.provider-tag input[type='checkbox'] {
   display: none;
 }
-/* line 213, ../sass/apps/_importer.sass */
+/* line 218, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set .subset {
   display: block;
 }
-/* line 216, ../sass/apps/_importer.sass */
+/* line 221, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set.hover {
   background-color: #fdfffd;
   cursor: pointer;
 }
-/* line 220, ../sass/apps/_importer.sass */
+/* line 225, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set.choosen {
   background-color: #ddffd9;
 }
-/* line 222, ../sass/apps/_importer.sass */
+/* line 227, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set.choosen .subset {
   display: block;
 }
-/* line 225, ../sass/apps/_importer.sass */
+/* line 230, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set.selected {
   background-color: #f4fff3;
 }
-/* line 227, ../sass/apps/_importer.sass */
+/* line 232, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set.selected .subset {
   display: block;
 }
-/* line 230, ../sass/apps/_importer.sass */
+/* line 235, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set ul {
   margin: 0;
 }
-/* line 233, ../sass/apps/_importer.sass */
+/* line 238, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set ul > li.small {
   font-size: 11px;
 }
-/* line 235, ../sass/apps/_importer.sass */
+/* line 240, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-set ul > li.key {
   font-weight: bold;
   padding: 0 5px 0 0;
   width: 50px;
 }
-/* line 249, ../sass/apps/_importer.sass */
+/* line 254, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item form.form-result .missing input {
   background-color: #fcf8e3;
 }
-/* line 252, ../sass/apps/_importer.sass */
+/* line 257, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item form.form-result .base {
   padding-top: 0 !important;
 }
-/* line 254, ../sass/apps/_importer.sass */
+/* line 259, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item form.form-result .ac-result {
   position: absolute;
   z-index: 1000;
   background: white;
   width: 416px;
 }
-/* line 260, ../sass/apps/_importer.sass */
+/* line 265, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item form.form-result .ac-result .listing .item {
   margin-bottom: 0;
   padding: 4px;
@@ -11728,113 +11737,113 @@ section.importer-importfiles .listing .item form.form-result .ac-result .listing
   background: #333333;
   color: white;
 }
-/* line 267, ../sass/apps/_importer.sass */
+/* line 272, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item form.form-result .ac-result .listing .item img {
   width: 63px;
   height: 63px;
 }
-/* line 270, ../sass/apps/_importer.sass */
+/* line 275, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item form.form-result .ac-result .listing .item.hover {
   background-color: #ddffd9;
   color: black;
 }
-/* line 278, ../sass/apps/_importer.sass */
+/* line 283, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-actions {
   padding: 5px 20px 5px 10px;
 }
-/* line 281, ../sass/apps/_importer.sass */
+/* line 286, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-actions .base {
   padding-top: 10px;
 }
-/* line 283, ../sass/apps/_importer.sass */
+/* line 288, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .item div.result-actions .advanced-fields {
   display: none;
 }
-/* line 289, ../sass/apps/_importer.sass */
+/* line 294, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .form-horizontal .control-group {
   margin-bottom: 0;
 }
-/* line 291, ../sass/apps/_importer.sass */
+/* line 296, ../sass/apps/_importer.sass */
 section.importer-importfiles .listing .form-horizontal .input-minitext {
   font-size: 10px;
 }
 
-/* line 297, ../sass/apps/_importer.sass */
+/* line 302, ../sass/apps/_importer.sass */
 .import.summary {
   margin-top: 20px;
 }
-/* line 302, ../sass/apps/_importer.sass */
+/* line 307, ../sass/apps/_importer.sass */
 .import.summary.listing.fixed {
   position: fixed;
   width: 260px;
   top: 120px;
 }
-/* line 307, ../sass/apps/_importer.sass */
+/* line 312, ../sass/apps/_importer.sass */
 .import.summary .item {
   padding: 4px 4px 4px 4px;
   margin: 5px 0 5px 0;
   border-bottom: 1px solid #efefef;
 }
-/* line 315, ../sass/apps/_importer.sass */
+/* line 320, ../sass/apps/_importer.sass */
 .import.summary .item .counters p {
   margin: 0;
 }
-/* line 317, ../sass/apps/_importer.sass */
+/* line 322, ../sass/apps/_importer.sass */
 .import.summary .item .counters dl {
   margin: 6px 0 0 0;
 }
-/* line 319, ../sass/apps/_importer.sass */
+/* line 324, ../sass/apps/_importer.sass */
 .import.summary .item .counters dl dt {
   float: left;
   width: 30px;
   text-align: right;
   padding-right: 4px;
 }
-/* line 325, ../sass/apps/_importer.sass */
+/* line 330, ../sass/apps/_importer.sass */
 .import.summary .item a.toggle {
   color: #333333;
 }
-/* line 327, ../sass/apps/_importer.sass */
+/* line 332, ../sass/apps/_importer.sass */
 .import.summary .item a.toggle:hover {
   text-decoration: none;
 }
-/* line 333, ../sass/apps/_importer.sass */
+/* line 338, ../sass/apps/_importer.sass */
 .import.summary .item.hover.done {
   background-color: #ddffd9;
 }
-/* line 336, ../sass/apps/_importer.sass */
+/* line 341, ../sass/apps/_importer.sass */
 .import.summary .item.hover.duplicate {
   background-color: #fffeac;
 }
-/* line 339, ../sass/apps/_importer.sass */
+/* line 344, ../sass/apps/_importer.sass */
 .import.summary .item.hover.ready {
   background-color: #ddffd9;
 }
 
-/* line 346, ../sass/apps/_importer.sass */
+/* line 351, ../sass/apps/_importer.sass */
 .popover .popover-content {
   padding: 8px;
   background: #333333;
   color: white;
 }
-/* line 350, ../sass/apps/_importer.sass */
+/* line 355, ../sass/apps/_importer.sass */
 .popover .popover-content img {
   width: 70px;
   height: 70px;
 }
-/* line 353, ../sass/apps/_importer.sass */
+/* line 358, ../sass/apps/_importer.sass */
 .popover .popover-content h1 {
   line-height: 100%;
   color: white;
   margin-bottom: 8px !important;
 }
-/* line 357, ../sass/apps/_importer.sass */
+/* line 362, ../sass/apps/_importer.sass */
 .popover .popover-content .alert {
   margin-bottom: 0px;
   margin-top: 8px;
 }
 
-/* line 361, ../sass/apps/_importer.sass */
+/* line 366, ../sass/apps/_importer.sass */
 span.dim {
   background: transparent;
   color: #a3a3a3;
