--- a/website/site-static/sass/apps/_importer.sass
+++ b/website/site-static/sass/apps/_importer.sass
@@ -44,7 +44,12 @@ i.ajax-loader
 $duplicateBackground: #fffeac
 //$duplicateBackground: #ddffd9
 
-
+#loading_message
+  min-height: 120px
+  text-align: center
+  vertical-align: middle
+  padding-top: 90px
+  background: #efefef
 
 
 section.importer-importfiles
