heavy cleaning session!

--- a/website/apps/alibrary/templates/alibrary/playlist/sidebar/_edit_transform.html
+++ b/website/apps/alibrary/templates/alibrary/playlist/sidebar/_edit_transform.html
@@ -60,7 +60,7 @@
                                title="{% trans "Make playlist public" %}">
                                 <i class="icon icon-exchange"></i>
                                 {% if  object.type == "broadcast" %}
-                                    <span>{% trans "Un-broadcast playlist" %}</span>
+                                    <span>{% trans "Revert from broadcastable to public" %}</span>
                                 {% else %}
                                     <span>{% trans "Make playlist public" %}</span>
                                 {% endif %}
