--- a/website/apps/abcast/templates/abcast/schedule.html
+++ b/website/apps/abcast/templates/abcast/schedule.html
@@ -102,6 +102,16 @@
 
                 scheduler.app.set_selection('playlist', '{{ selected_playlist.get_api_url }}');
 
+
+
+                var playlist_history = $.parseJSON('{{ playlist_history }}')
+
+            console.log('playlist_history:', playlist_history);
+
+
+
+
+
                 $('#inline_calendar').DatePicker({
                     flat: true,
                     date: '{{ range_start|date:"Y-m-d" }}',
